@@ -709,7 +709,10 @@ void delete_all(int selected_only) {
       f = g;
     } else f = f->next;
   }
-  if(!selected_only)    include_H_from_C=1;
+  if(!selected_only) {
+		include_H_from_C=1;
+		use_FL_COMMAND=0;
+	}
 
   selection_changed(0);
 }
