@@ -3,6 +3,8 @@ CHANGES IN FLTK 1.1.8
 	- Documentation fixes (STR #1454, STR #1455, STR #1456,
 	  STR #1457, STR #1458, STR #1460, STR #1481, STR #1578,
 	  STR #1639, STR #1645, STR #1644)
+	- New option in Fluid project settings to translate all
+	  shortcut modifiers from FL_META or FL_CTRL to FL_COMMAND
 	- Added static icon, text selection, and HTML formatting to
 	  fl_message etc. (STR #1626)
 	- Fixed selection of first word in Fl_Help_View
